fix: increase the z-index for avoid overlapping by the modal

--- a/assets/hb/modules/snackbar/scss/index.scss
+++ b/assets/hb/modules/snackbar/scss/index.scss
@@ -1,4 +1,8 @@
 /*! purgecss start ignore */
 @import "../../../../mods/snackbar/scss/index";
 
+.snackbars {
+    z-index: $zindex-modal + 1;
+}
+
 /*! purgecss end ignore */
